# fraser-plays-tetris

./: .gitignore  LICENSE  README.md  agentTetris.py  clang-5.0-py3-none-any.whl  dqn.py  gameTetris.py  helper.py  model  model.py  plots.ipynb  pyproject.toml  targetmodel.pt  tetris_model.pth
model/: model.pth  model_gamma0.9_lr0.001_method-full.pth  model_gamma0.9_lr0.001_method-simple.pth  model_gamma0.9_lr0.01_method-simple.pth
tetris_school/: example.py  games.py  layers.py  model.py  utils.py
