[tool.poetry]
authors = ["Matilda Peruzzo <matilda.peruzzo@gmail.com>"]
description = "A package for teaching algorithms to play tetris with RL"
license = "MIT"
name = "tetris-school"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.7,^3.8"
torch = "^2.2.0"
numpy = "1.21"
matplotlib = "3.5"
pygame = "^2.5.2"
ipython = "7.34"
tqdm = "^4.66.1"
joblib = "^1.3.2"
gymnasium = {extras = ["classic-control"], version = "^0.29.1"}
gym-tetris = "^3.0.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
