[tool.poetry]
authors = ["Matilda Peruzzo <matilda.peruzzo@gmail.com>", "Grisha Szep <grisha.szep@gmail.com>"]
description = "A package for teaching algorithms to play tetris with RL"
license = "MIT"
name = "tetris-school"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
colorama = "^0.4.6"
gymnasium = {extras = ["accept-rom-license", "atari"], version = "^0.29.1"}
ipython = "^8.22"
joblib = "^1.3.2"
matplotlib = "^3.8"
numpy = "^1.26"
pygame = "^2.5.2"
python = "^3.11"
torch = "^2.2"
tqdm = "^4.66.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pylint.messages_control]
max-line-length = 140

[tool.black]
include = '\.pyi?$'
line-length = 140

[tool.isort]
line_length = 140
profile = "black"

[tool.mypy]
allow_redefinition = true
check_untyped_defs = true
explicit_package_bases = true
files = ["."]
follow_imports = "normal"
ignore_missing_imports = true
local_partial_types = true
namespace_packages = true
python_version = "3.11"
show_column_numbers = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "matplotlib.*",
]
